Created a new folder for the donation page

--- a/Paintball Site/Home Page/Home.html
+++ b/Paintball Site/Home Page/Home.html
@@ -18,7 +18,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="../Favicon Files/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="96x96" href="../Favicon Files/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="../Favicon Files/favicon-16x16.png">
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title>RIT Paintball</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -27,6 +27,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="../Old Files/SocialMedia.css" rel="stylesheet">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -53,7 +54,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">RIT Tigers Paintball</h1> <!--See if we can move this over a cm-->
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Tigers on three!!</h2>
-                        <a class="btn btn-primary" href="#about">Get Started</a> <!--change color to orange-->
+                        <a class="btn btn-primary" href="#projects">Get Started</a> <!--change color to orange-->
                     </div>
                 </div>
             </div>
@@ -64,30 +65,24 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="../Images/TeamLogo.jpg" alt="..." /></div> <!--Look up on bootstap docs to cen-->
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="../Images/Background.jpg" alt="..." /></div> <!--Look up on bootstap docs to cen-->
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>R.I.T</h4>
+                            <p class="text-black-50 mb-0">Rochester Institute of Technology is the home to our club.</p>
                         </div>
                     </div>
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="./img/OldAline.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="../Images/Brenner_Cool.JPG" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <div class="col-sm">
-                                        <div class="photo-container">
-                                          <div class="photo">
-                                              <img src="../Images/Natty_3rd_Place.jpg" alt="">
-                                              <div class="photo-overlay">
-                                                  <h3 class="white-head"> About</h3> 
-                                              </div>
-                                          </div>
-                                    </div>
+                                    <h4 class="text-white">Friendships</h4>
+                                    <p class="mb-0 text-white-50"></p>
+                                    <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
                         </div>
@@ -95,13 +90,13 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="../Images/Jordan_Dill.JPG" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                    <h4 class="text-white">Unforgettable Memories</h4>
+                                    <p class="mb-0 text-white-50">The amount of years spent together on and off the field created lasting memories.</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -191,10 +186,9 @@
                 </div>
               </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
-
+                    <a class="mx-2" href="https://twitter.com/ritpaintball?lang=en" target="_blank"><i class="fab fa-twitter" ></i></a>
+                    <a class="mx-2" href="https://www.facebook.com/RITPaintball" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://www.instagram.com/rittigerspaintball" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </section>
