--- a/Paintball Site/Home Page/Home.html
+++ b/Paintball Site/Home Page/Home.html
@@ -38,12 +38,13 @@
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto text-light">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Discover</a></li>
-                    </ul>
+                   <div class=" float-start"> 
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav ms-auto text-light">
+                            <li class="nav-item"><a class="nav-link" href="#projects">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#signup">Discover</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -158,7 +159,7 @@
                         <div class="photo">
                             <img src="../Images/Natty_3rd_Place.jpg" alt="">
                             <div class="photo-overlay">
-                                <h3 class="white-head"> About</h3> 
+                                <a href="../About Page/About.html"><h3 class="white-head2">About</h3></a> 
                             </div>
                         </div>
                       </div>
@@ -168,7 +169,7 @@
                       <div class="photo">
                           <img src="../Images/aline_1st place old.jpg" alt="">
                           <div class="photo-overlay" >
-                              <a href="../Paintball Site/TimeLine.html"><h3 class="white-head1">Time Line</h3></a>  
+                              <a href="../TimeLine.html"><h3 class="white-head1">Time Line</h3></a>  
                           </div>
                       </div>
                   </div>
