Updated home page

--- a/Paintball Site/Home Page/Home.html
+++ b/Paintball Site/Home Page/Home.html
@@ -82,7 +82,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Friendships</h4>
-                                    <p class="mb-0 text-white-50"></p>
+                                        <p class="mb-0 text-white-50"></p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -97,7 +97,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Unforgettable Memories</h4>
-                                    <p class="mb-0 text-white-50">The amount of years spent together on and off the field created lasting memories.</p>
+                                        <p class="mb-0 text-white-50">The amount of years spent together on and off the field created lasting memories.</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -157,7 +157,7 @@
                   <div class="col-sm">
                       <div class="photo-container">
                         <div class="photo">
-                            <img src="../Images/Natty_3rd_Place.jpg" alt="">
+                            <img src="../Images/Natty_3rd_Place.jpg" alt="Image not available">
                             <div class="photo-overlay">
                                 <a href="../About Page/About.html"><h3 class="white-head2">About</h3></a> 
                             </div>
@@ -166,35 +166,34 @@
                   </div>
                   <div class="col-sm">
                     <div class="photo-container"> 
-                      <div class="photo">
-                          <img src="../Images/aline_1st place old.jpg" alt="">
-                          <div class="photo-overlay" >
-                              <a href="../TimeLine.html"><h3 class="white-head1">Time Line</h3></a>  
-                          </div>
-                      </div>
-                  </div>
-                  </div>
-                  <div class="col-sm">
-                      <div class="photo-container">
                         <div class="photo">
-                            <img src="../Images/HB_Win.jpg" alt="">
-                            <div class="photo-overlay">
-                                <h3 class="white-head"> Donate</h3> 
+                            <img src="../Images/aline_1st place old.jpg" alt="Image not available">
+                            <div class="photo-overlay" >
+                                <a href="../TimeLine.html"><h3 class="white-head1">Time Line</h3></a>  
                             </div>
                         </div>
-                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm">
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="../Images/HB_Win.jpg" alt="Image not available">
+                            <div class="photo-overlay">
+                                <a href="../Donate/index.html"><h3 class="white-head">Donate</h3></a>
+                            </div>
+                        </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://twitter.com/ritpaintball?lang=en" target="_blank"><i class="fab fa-twitter" ></i></a>
-                    <a class="mx-2" href="https://www.facebook.com/RITPaintball" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="https://www.instagram.com/rittigerspaintball" target="_blank"><i class="fab fa-instagram"></i></a>
-                </div>
+                    <div class="social d-flex justify-content-center">
+                        <a class="mx-2" href="https://twitter.com/ritpaintball?lang=en" target="_blank"><i class="fab fa-twitter" ></i></a>
+                        <a class="mx-2" href="https://www.facebook.com/RITPaintball" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="mx-2" href="https://www.instagram.com/rittigerspaintball" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2021</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; RIT Tigers Paintball 2021</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
