--- a/Paintball Site/Home Page/index.html
+++ b/Paintball Site/Home Page/index.html
@@ -60,7 +60,15 @@
                 </div>
             </div>
         </header>
-     
+        <!-- About-->
+        <section class="about-section text-center" id="about">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8">
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
