--- a/Paintball Site/About Page/About.html
+++ b/Paintball Site/About Page/About.html
@@ -47,8 +47,8 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Timeline</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Our Club</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Sponsors</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Achievements</a></li>
                         
                     </ul>
@@ -78,30 +78,47 @@
                         <h2 class="text-white mt-0">RIT Tigers Paintball</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">RIT Tigers Paintball is a competitive club that partakes in events around the country which are hosted by the NCPA and NXL.</p>                            
-                        <img src="../Images/TeamLogo.jpg" alt="Team Logo">
+                        
+                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Services-->
         <section class="page-section" id="services">
-            <div class="container px-4 px-lg-5">
-                <h1 class="text-center mt-0">A Brief History</h1>
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8 text-center">  
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/DLxQM4D1fik" 
-                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                        </iframe>   
+            <h2 class="text-center mt-0">Sponsors</h2>
+            <hr class="divider" />
+            <div class="container text-center">
+                <div class="row">
+                  <div class="col-sm">
+                      <div class="photo-container">
+                        <div class="photo">
+                            <img src="../Images/PaintballPhotographyIcon2.JPG" alt="Image not available">
+                        </div>
+                      </div>
+                  </div>
+                  <div class="col-sm">
+                    <div class="photo-container"> 
+                        <div class="photo">
+                            <img src="../Images/grc.png" alt="Image not available">
+                        </div>
                     </div>
+                  </div>
+                  <div class="col-sm">
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="../Images/orda66.png" alt="Image not available">
+                        </div>
+                    </div>
+                  </div>
                 </div>
-            </div>
         </section>
         <!-- Portfolio-->
         <div id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="./img/HB_Win.jpg" title="Project Name">
+                        <a class="portfolio-box" href="./img/HB_Win.jpg" title="RIT Wins NPPL Huntington Beach">
                             <img class="img-fluid" src="./img/HB_Win.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
@@ -110,7 +127,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="./img/aline_1st place old.jpg" title="Project Name">
+                        <a class="portfolio-box" href="./img/aline_1st place old.jpg" title="RIT Wins NCPA - NEIC Event #2">
                             <img class="img-fluid" src="./img/aline_1st place old.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
@@ -146,7 +163,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="./img/Natty_3rd_Place.jpg" title="Project Name">
+                        <a class="portfolio-box" href="./img/Natty_3rd_Place.jpg" title="RIT Places 3rd at Nationals in Florida">
                             <img class="img-fluid" src="./img/Natty_3rd_Place.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
