--- a/Paintball Site/Home Page/index.html
+++ b/Paintball Site/Home Page/index.html
@@ -26,7 +26,7 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles_home.css" rel="stylesheet" />
         <link href="../Old Files/SocialMedia.css" rel="stylesheet">
     </head>
     <body id="page-top">
@@ -167,7 +167,7 @@
                         <div class="photo">
                             <img src="../Images/Natty_3rd_Place.jpg" alt="Image not available">
                             <div class="photo-overlay">
-                                <a href="../About Page/About.html"><h3 class="white-head2">About</h3></a> 
+                                <a href="../About Page/index.html"><h3 class="white-head2">About</h3></a> 
                             </div>
                         </div>
                       </div>
