Changed name of stylesheet to match page type

--- a/Paintball Site/About Page/index.html
+++ b/Paintball Site/About Page/index.html
@@ -14,7 +14,7 @@
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles_about.css" rel="stylesheet" />
         <!-- start favicon info-->
         <link rel="stylesheet" href="Basic_style.css">
         <link rel="apple-touch-icon" sizes="57x57" href="../Favicon Files/apple-icon-57x57.png">
