--- a/Paintball Site/Donate/index.html
+++ b/Paintball Site/Donate/index.html
@@ -5,8 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Coming Soon - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <title>Donate</title>
+        <link rel="apple-touch-icon" sizes="57x57" href="../Favicon Files/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="../Favicon Files/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="../Favicon Files/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="../Favicon Files/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="../Favicon Files/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="../Favicon Files/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="../Favicon Files/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="../Favicon Files/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="../Favicon Files/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="../Favicon Files/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../Favicon Files/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="../Favicon Files/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../Favicon Files/favicon-16x16.png">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -19,45 +31,26 @@
     <body>
         <!-- Background Video-->
         <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="../Images/pexels-free-creative-stuff-5561385.mp4" type="video/mp4" /></video>
+        
+        <!--Nav Bar-->
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../Home Page/">Home</a>
+        </nav>
+        
         <!-- Masthead-->
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class="fst-italic lh-1 mb-4">Our Website is Coming Soon</h1>
-                    <p class="mb-5">We're working hard to finish the development of this site. Sign up below to receive updates and to be notified when we launch!</p>
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                        <!-- Email address input-->
-                        <div class="row input-group-newsletter">
-                            <div class="col"><input class="form-control" id="email" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                            <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
+                    <h1 class="fst-italic lh-1 mb-4">If you would like to donate, please click the following link</h1>
+                    <p class="mb-5">The RIT Paintball Club relies heavily on donations and personal funds, any donation is appreciated!</p>
+                    <div class="row input-group-newsletter">
+                        <div class="col-auto">
+                            <form action="https://tigers.rit.edu/site/SPageNavigator/RIT_donate.html" target="_blank">
+                            <button class="btn btn-primary" id="submitButton" type="submit">Click to Donate</button>
+                            </form>
                         </div>
-                        <div class="invalid-feedback mt-2" data-sb-feedback="email:required">An email is required.</div>
-                        <div class="invalid-feedback mt-2" data-sb-feedback="email:email">Email is not valid.</div>
-                        <!-- Submit success message-->
-                        <!---->
-                        <!-- This is what your users will see when the form-->
-                        <!-- has successfully submitted-->
-                        <div class="d-none" id="submitSuccessMessage">
-                            <div class="text-center mb-3 mt-2">
-                                <div class="fw-bolder">Form submission successful!</div>
-                                To activate this form, sign up at
-                                <br />
-                                <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                            </div>
-                        </div>
-                        <!-- Submit error message-->
-                        <!---->
-                        <!-- This is what your users will see when there is-->
-                        <!-- an error submitting the form-->
-                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,9 +58,9 @@
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
-                <a class="btn btn-dark m-3" href="#!"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-dark m-3" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-dark m-3" href="#!"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-dark m-3" href="https://twitter.com/ritpaintball?lang=en" target="_blank"><i class="fab fa-twitter" ></i></a>
+                <a class="btn btn-dark m-3" href="https://www.facebook.com/RITPaintball" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark m-3" href="https://www.instagram.com/rittigerspaintball" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <!-- Bootstrap core JS-->
