--- a/Paintball Site/Donate/index.html
+++ b/Paintball Site/Donate/index.html
@@ -35,7 +35,7 @@
         <!--Nav Bar-->
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../Home Page/">Home</a>
+                <a class="navbar-brand" href="../Home Page/index.html">Home</a>
         </nav>
         
         <!-- Masthead-->
