--- a/Paintball Site/Donate/index.html
+++ b/Paintball Site/Donate/index.html
@@ -33,11 +33,35 @@
         <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="../Images/pexels-free-creative-stuff-5561385.mp4" type="video/mp4" /></video>
         
         <!--Nav Bar-->
-        <nav class="navbar navbar-dark bg-dark">
+       <!-- <nav class="navbar fixed-top navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../Home Page/index.html">Home</a>
-        </nav>
-        
+                <a class="navbar-brand" href="../Home Page/index.html">About</a>
+        </nav>-->
+        <nav class="navbar fixed-top navbar-expand-sm navbar-dark ">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../Home Page/index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../About Page/index.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">TimeLine</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+
+
+
         <!-- Masthead-->
         <div class="masthead">
             <div class="masthead-content text-white">
