--- a/Paintball Site/Donate/index.html
+++ b/Paintball Site/Donate/index.html
@@ -38,7 +38,7 @@
                 <a class="navbar-brand" href="../Home Page/index.html">Home</a>
                 <a class="navbar-brand" href="../Home Page/index.html">About</a>
         </nav>-->
-        <nav class="navbar fixed-top navbar-expand-sm navbar-dark ">
+        <nav class="navbar navbar-expand-sm navbar-dark ">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
