--- a/Official Site/About.html
+++ b/Official Site/About.html
@@ -14,22 +14,22 @@
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles_about.css" rel="stylesheet" />
+        <link href="./css/styles_about.css" rel="stylesheet" />
         <!-- start favicon info-->
-        <link rel="stylesheet" href="Basic_style.css">
-        <link rel="apple-touch-icon" sizes="57x57" href="../Favicon Files/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="../Favicon Files/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="../Favicon Files/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="../Favicon Files/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="../Favicon Files/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="../Favicon Files/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="../Favicon Files/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="../Favicon Files/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="../Favicon Files/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="../Favicon Files/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../Favicon Files/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="../Favicon Files/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../Favicon Files/favicon-16x16.png">
+        <link rel="stylesheet" href="Favicon Files/">
+        <link rel="apple-touch-icon" sizes="57x57" href="./Favicon Files/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./Favicon Files/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./Favicon Files/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./Favicon Files/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./Favicon Files/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./Favicon Files/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./Favicon Files/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./Favicon Files/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./Favicon Files/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./Favicon Files/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./Favicon Files/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./Favicon Files/android-icon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./Favicon Files/favicon-16x16.png">
         <link rel="manifest" href="/manifest.json">
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -43,7 +43,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="../Home Page/index.html">Home</a>
+                <a class="navbar-brand" href="./index.html">Home</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -166,21 +166,21 @@
                   <div class="col-sm">
                       <div class="photo-container">
                         <div class="photo">
-                            <img src="../Images/PaintballPhotographyIcon2.JPG" alt="Image not available">
+                            <img src="./img/PaintballPhotographyIcon2.JPG" alt="Image not available">
                         </div>
                       </div>
                   </div>
                   <div class="col-sm">
                     <div class="photo-container"> 
                         <div class="photo">
-                            <img src="../Images/grc.png" alt="Image not available">
+                            <img src="./img/grc.png" alt="Image not available">
                         </div>
                     </div>
                   </div>
                   <div class="col-sm">
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="../Images/orda66.png" alt="Image not available">
+                            <img src="./img/orda66.png" alt="Image not available">
                         </div>
                     </div>
                   </div>
@@ -195,7 +195,7 @@
         <!-- SimpleLightbox plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="./js/scripts_about.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
