--- a/Official Site/Donate.html
+++ b/Official Site/Donate.html
@@ -6,19 +6,19 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Donate</title>
-        <link rel="apple-touch-icon" sizes="57x57" href="../Favicon Files/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="../Favicon Files/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="../Favicon Files/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="../Favicon Files/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="../Favicon Files/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="../Favicon Files/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="../Favicon Files/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="../Favicon Files/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="../Favicon Files/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="../Favicon Files/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../Favicon Files/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="../Favicon Files/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../Favicon Files/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="./Favicon Files/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./Favicon Files/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./Favicon Files/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./Favicon Files/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./Favicon Files/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./Favicon Files/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./Favicon Files/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./Favicon Files/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./Favicon Files/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./Favicon Files/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./Favicon Files/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./Favicon Files/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./Favicon Files/favicon-16x16.png">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -26,11 +26,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles_donate.css" rel="stylesheet" />
+        <link href="./css/styles_donate.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Background Video-->
-        <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="../Images/pexels-free-creative-stuff-5561385.mp4" type="video/mp4" /></video>
+        <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="./img/pexels-free-creative-stuff-5561385.mp4" type="video/mp4" /></video>
         
         <!--Nav Bar-->
        <!-- <nav class="navbar fixed-top navbar-dark">
@@ -46,10 +46,10 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../Home Page/index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../About Page/index.html">About</a>
+                    <a class="nav-link" href="./About.html">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">TimeLine</a>
@@ -90,7 +90,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="./js/scripts_donate.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
