--- a/Official Site/index.html
+++ b/Official Site/index.html
@@ -5,19 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <link rel="apple-touch-icon" sizes="57x57" href="../Favicon Files/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="../Favicon Files/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="../Favicon Files/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="../Favicon Files/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="../Favicon Files/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="../Favicon Files/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="../Favicon Files/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="../Favicon Files/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="../Favicon Files/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="../Favicon Files/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../Favicon Files/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="../Favicon Files/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../Favicon Files/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="./Favicon Files/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./Favicon Files/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./Favicon Files/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./Favicon Files/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./Favicon Files/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./Favicon Files/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./Favicon Files/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./Favicon Files/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./Favicon Files/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./Favicon Files/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./Favicon Files/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./Favicon Files/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./Favicon Files/favicon-16x16.png">
         <title>RIT Paintball</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -26,8 +26,7 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles_home.css" rel="stylesheet" />
-        <link href="../Old Files/SocialMedia.css" rel="stylesheet">
+        <link href="./css/styles_home.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -74,7 +73,7 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="../Images/Background.jpg" alt="..." /></div> <!--Look up on bootstap docs to cen-->
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="./img/Background.jpg" alt="..." /></div> <!--Look up on bootstap docs to cen-->
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>R.I.T</h4>
@@ -84,7 +83,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="../Images/Brenner_Cool.JPG" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="./img/Brenner_Cool.JPG" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -99,7 +98,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="../Images/Jordan_Dill.JPG" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="./img/Jordan_Dill.JPG" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -165,9 +164,9 @@
                   <div class="col-sm">
                       <div class="photo-container">
                         <div class="photo">
-                            <img src="../Images/Natty_3rd_Place.jpg" alt="Image not available">
+                            <img src="./img/Natty_3rd_Place.jpg" alt="Image not available">
                             <div class="photo-overlay">
-                                <a href="../About Page/index.html"><h3 class="white-head2">About</h3></a> 
+                                <a href="./About.html"><h3 class="white-head2">About</h3></a> 
                             </div>
                         </div>
                       </div>
@@ -175,7 +174,7 @@
                   <div class="col-sm">
                     <div class="photo-container"> 
                         <div class="photo">
-                            <img src="../Images/aline_1st place old.jpg" alt="Image not available">
+                            <img src="./img/aline_1st place old.jpg" alt="Image not available">
                             <div class="photo-overlay" >
                                 <a href="../TimeLine.html"><h3 class="white-head1">Time Line</h3></a>  
                             </div>
@@ -185,9 +184,9 @@
                   <div class="col-sm">
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="../Images/HB_Win.jpg" alt="Image not available">
+                            <img src="./img/HB_Win.jpg" alt="Image not available">
                             <div class="photo-overlay">
-                                <a href="../Donate/index.html"><h3 class="white-head">Donate</h3></a>
+                                <a href="./Donate.html"><h3 class="white-head">Donate</h3></a>
                             </div>
                         </div>
                     </div>
@@ -205,7 +204,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="./js/scripts_home.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
