--- a/Official Site/About.html
+++ b/Official Site/About.html
@@ -119,25 +119,25 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="./img/NVP_OldKrew.jpg" title="Project Name">
+                        <a class="portfolio-box" href="./img/NVP_OldKrew.jpg" title="RIT Wins NCPA - NEIC Event #3">
                             <img class="img-fluid" src="./img/NVP_OldKrew.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">2013</div>
+                                <div class="project-name">2014</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="./img/Team_Photo2.jpg" title="Project Name">
+                        <a class="portfolio-box" href="./img/Team_Photo2.jpg" title="RIT Wins NCPA - Brick City Open">
                             <img class="img-fluid" src="./img/Team_Photo2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">2013</div>
+                                <div class="project-name">2012</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="./img/Team_Photo_1st_Event.jpg" title="Project Name">
+                        <a class="portfolio-box" href="./img/Team_Photo_1st_Event.jpg" title="RIT Wins NEIC AA Conference #1">
                             <img class="img-fluid" src="./img/Team_Photo_1st_Event.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
