--- a/Official Site/index.html
+++ b/Official Site/index.html
@@ -176,7 +176,7 @@
                         <div class="photo">
                             <img src="./img/aline_1st place old.jpg" alt="Image not available">
                             <div class="photo-overlay" >
-                                <a href="../TimeLine.html"><h3 class="white-head1">Time Line</h3></a>  
+                                <a href="./Timeline.html"><h3 class="white-head1">Time Line</h3></a>  
                             </div>
                         </div>
                     </div>
