--- a/Official Site/Donate.html
+++ b/Official Site/Donate.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="./About.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">TimeLine</a>
+                    <a class="nav-link" href="./Timeline.html">TimeLine</a>
                   </li>
                 </ul>
               </div>
