Added information to the table

--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -43,33 +43,115 @@
             </div>
             <!-- Content Row-->
             <div class="table-responsive">
-                <table class="table table-hover">
+                <table class="table table-dark table-hover">
                     <thead>
                       <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Event Name</th>
+                        <th scope="col">Roster Name</th>
+                        <th scope="col">Division</th>
+                        <th scope="col">Rank</th>
+                        <th scope="col">Date</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                      </tr>
+                    
+                    <tr>
+                        <td>NCPA - Brick City Open</td>
+                        <td>RIT Tigers - Black</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>1 of 9</td>
+                        <td>10/06/2012</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC Event #1</td>
+                        <td>RIT Tigers - Orange</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>2 of 9</td>
+                        <td>10/05/2013</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC Event #2</td>
+                        <td>RIT Tigers - Orange</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>1 of 12</td>
+                        <td>11/02/2013</td>
+                    </tr>
+                    <tr><td>NCPA - NEIC Event #3</td>
+                        <td>RIT Tigers - Orange</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>1 of 14</td>
+                        <td>02/22/2014</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC #4</td>
+                        <td>RIT Tigers</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>2 of 11</td>
+                        <td>03/29/2014</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - 2015 National Championships</td>
+                        <td>RIT Tigers - Black</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>3 of 51</td>
+                        <td>04/17/2015</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - Northeast Conference #1</td>
+                        <td>Rochester Institute of Technology Tigers - Black</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>2 of 10</td>
+                        <td>10/03/2015</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - Northeast Conference #4</td>
+                        <td>Rochester Institute of Technology Tigers - Black</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>3 of 7</td>
+                        <td>04/02/2016</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC AA Conference #1</td>
+                        <td>Rochester Institute of Technology Tigers - Orange</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>1 of 9</td>
+                        <td>10/08/2016</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC AA Conference #3</td>
+                        <td>Rochester Institute of Technology Tigers - Orange</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>2 of 10</td>
+                        <td>04/01/2017</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC AA Conference #1</td>
+                        <td>Rochester Institute of Technology Tigers - Black</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>2 of 9</td>
+                        <td>09/30/2017</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC AA Conference #2</td>
+                        <td>Rochester Institute of Technology Tigers - Orange</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>2 of 7</td>
+                        <td>02/17/2018</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC Open #3</td>
+                        <td>Rochester Institute of Technology Tigers</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>3 of 5</td>
+                        <td>03/23/2019</td>
+                    </tr>
+                    <tr>
+                        <td>NCPA - NEIC Open #4</td>
+                        <td>Rochester Institute of Technology Tigers</td>
+                        <td>College RaceTo-2 (5-man)</td>
+                        <td>2 of 6</td>
+                        <td>03/24/2019</td>
+                    </tr>
                     </tbody>
                   </table>
               </div>
