--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -42,7 +42,7 @@
                 <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p></div>
             </div>
             <!-- Content Row-->
-            <div class="table-responsive">
+           <div class="table-responsive">
                 <table class="table table-dark table-hover">
                     <thead>
                       <tr>
@@ -154,9 +154,10 @@
                     </tr>
                     </tbody>
                   </table>
-              </div>
+              </div> 
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
+        
+        <footer class="py-5 bg-black">
             <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
         </footer>
         <!-- Bootstrap core JS-->
