--- a/Official Site/Timeline.html
+++ b/Official Site/Timeline.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>Timeline</title>
         <!-- Favicon-->
         <link rel="apple-touch-icon" sizes="57x57" href="./Favicon Files/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./Favicon Files/apple-icon-60x60.png">
@@ -106,7 +106,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+                                <img class="img-fluid" src="./img/Team_Photo_Last_Natty.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Threads</div>
@@ -121,7 +121,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid" src="./img/Natty_3rd_Place.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Explore</div>
@@ -196,59 +196,86 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Accomplishments</h2>
+                    <h3 class="section-subheading text-muted">View RIT's victories over the years!</h3>
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class=" img-fluid" src="./img/aline_1st place old.jpg" alt="..." /></div>
+                        <div class="timeline-image">
+                            <a href="./img/HB_Win.jpg">
+                                <img class="rounded-circle img-fluid" src="./img/HB_Win.jpg" alt="..." />
+                            </a>
+                        </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>2012</h4>
+                                <h4 class="subheading">RIT wins NPPL Huntington Beach</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">In one of RIT's greatest events of all time, A-line proceeds to win in the finals during a one on one, B-Line takes third, and C-line takes 4th.</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="./img/HB_Win.jpg" alt="..." /></div>
+                    <li class="timeline-inverted"> <!--Positions text to the right-->
+                        <div class="timeline-image">
+                            <a href="./img/Team_Photo2.jpg">
+                                <img class="rounded-circle img-fluid" src="./img/Team_Photo2.jpg" alt="..." />
+                            </a>
+                        </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>October 2012</h4>
+                                <h4 class="subheading">RIT wins NCPA - Brick City Open</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">RIT wins the finals against University at Buffalo Bulls two out of three matches.</p></div>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class=" container-fluid" src="" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                        <div class="timeline-image">
+                            <a href="./img/aline_1st place old.jpg">
+                                <img class="rounded-circle img-fluid" src="./img/aline_1st place old.jpg" alt="..." />
+                            </a>
                         </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4>October 2013</h4>
+                                <h4 class="subheading">RIT wins NCPA - NEIC Event #2</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">RIT struggled to get out of the preliminaries, but ended up moving all the way to finals beating Drexel University. </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of Our
-                                <br />
-                                Story!
-                            </h4>
+                            <a href="./img/NVP_OldKrew.jpg">
+                                <img class="rounded-circle img-fluid" src="./img/NVP_OldKrew.jpg" alt="..." />
+                            </a>
+                            </div>
+                        <div class="timeline-panel ">
+                            <div class="timeline-heading">
+                                <h4>February 2014</h4>
+                                <h4 class="subheading">RIT wins NCPA - NEIC Event #3</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">RIT wins against Suny Oswego. </p></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <a href="./img/Team_Photo_1st_Event.jpg">
+                                <img class="rounded-circle img-fluid" src="./img/Team_Photo_1st_Event.jpg" alt="..." />
+                            </a>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>October 2016</h4>
+                                <h4 class="subheading">RIT wins NCPA - NEIC AA Conference #1</h4>  
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">RIT wins the 1st event of the year against Drexel University.</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><a class="portfolio-box"></div>
+                            <div class="timeline-image"><img class="rounded-circle img-fluid" src="./img/TeamLogo.jpg" alt="..." /></div>
+                            <div class="timeline-heading">
+                                
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -411,7 +438,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="./img/Team_Photo_Last_Natty.jpg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
